--- a/src/components/Navbar/Dropdown.css
+++ b/src/components/Navbar/Dropdown.css
@@ -12,6 +12,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  overflow-y: scroll;
 }
 
 .dropdown-content a {
